# ugv_comms_in_gazebo

./: .gitignore  .gitmodules  README.md  comms.ign  launch.py  launch2.py  rf_comms_custom.sdf
antenna_gains/: h_plane.csv
gz-sim-fortress/examples/worlds/: rf_comms_fortress.sdf
launch_config/: rf_comms_custom.yaml  rf_comms_custom2.yaml  rf_comms_custom_.yaml
model/: rf_comms_custom.sdf
model/antenna_gains/: e_plane.csv
model/comms/: publisher.cc
model/comms_endpoint/: CommsEndpoint.hh
model/result_shared/: 2023_11_07_15:42:03.csv
model/rf_comms_custom/: RFComms_custom.cc  RFComms_custom.hh
models/base_stations/urdf/: base_station_0.urdf  base_station_1.urdf  base_station_2.urdf  base_station_3.urdf  base_station_4.urdf
models/base_stations/xacro/: base_station_0.xacro  base_station_1.xacro  base_station_2.xacro  base_station_3.xacro  base_station_4.xacro
models/ground_station_antennas/urdf/: ground_station_antenna_0.urdf  ground_station_antenna_1.urdf  (+1 more)
models/ground_stations/: ground_station_0.sdf
models/ugvs/: ugv_0.sdf
models/xacro/: base_station.xacro
models/xacro_base/: ground_station.xacro  ground_station_antenna.xacro  multicopter.xacro  ugv.xacro
nodes/: base_stations.json  ugvs.json
src/comms/: publisher.cc
src/comms_endpoint/: CommsEndpoint.hh
src/rf_comms_custom/: RFComms_custom.cc
src/rf_comms_custom copy/: RFComms_custom.cc
src/rf_comms_custom_240508/: CMakeLists.txt  RFComms_custom.cc
worlds/: multicopter_velocity_control_with_wind.sdf  rf_comms_custom.sdf  rf_comms_custom2.sdf  rf_comms_custom_.sdf
(+18 files in other folders)
